k8s/20-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth
  namespace: arch-course
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: klwxsrx/arch-course-auth-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: catalog
  namespace: arch-course
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: klwxsrx/arch-course-catalog-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: klwxsrx/arch-course-order-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: klwxsrx/arch-course-payment-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: warehouse
  labels:
    app: warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
        - name: warehouse
          image: klwxsrx/arch-course-warehouse-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: klwxsrx/arch-course-delivery-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
